# boolco.dev

./: .env  .gitignore  Cargo.toml  README.md  index.html
.cargo/: config.toml
cargo-dev/: Cargo.toml
cargo-dev/src/: lib.rs  main.rs
res/: discord_name.html  game_bad_message.html  game_greedy.html  game_success.html  login_form.html  og_empty.html  register_form.html
src/: auth.rs  db.rs  discord_name.rs  game.rs  index.rs  main.rs  og.rs  short.rs  ssl.rs
src/auth/: middleware.rs
static/: game.css  game_bad_message.html  game_greedy.html  game_success.html  index.css  og_empty.html
static/browser_stuff/: site.webmanifest
static/script/: discord_name.js
static/style/: discord_name.css  game.css  index.css  short.css
templates/: game.html  index.html  login.html  og.html  register.html  short.html
