[package]
name = "website"
version = "0.1.0"
edition = "2021"

[features]
prepare_db = []

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
actix-web-lab = "0.16"
actix-files = "0.6"

env_logger = "0.9"
log = "0.4"
rustls = "0.20.2"
rustls-pemfile = "1"
askama = { version = "0.11.1", features = ["with-actix-web"] }
serde = "1.0.139"
tokio = { version = "1.19.2", features = ["sync", "fs"] }
serde_json = "1.0.82"
askama_actix = "0.13.0"
serde_urlencoded = "0.7.1"
poingus = { git = "https://github.com/booleancoercion/poingus", tag = "v0.1.0" }
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
] }
argon2 = "0.5.2"
base64 = "0.21.5"
toml = "0.8.8"

[profile.release]
strip = "symbols"
lto = "thin"

[profile.dev.package.sqlx-macros]
opt-level = 3
