[package]
name = "cargo-dev"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
const_format = "0.2.26"
serde = { version = "1.0.139", features = ["derive"] }
toml = "0.5.9"
